# Hunyuan3D-2

./: pyproject.toml  setup.py  test.py
hy3dgen/texgen/custom_rasterizer/: pyproject.toml
hy3dgen/texgen/differentiable_renderer/: setup.py
