[build-system]

requires = ["setuptools>=61.0", "wheel", "ninja", "torch", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hunyuan3d-2"
version = "2.0.2"
description = "Hunyuan3D 2.0 - Advanced 3D synthesis system"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "diffusers>=0.33.1",
    "einops>=0.8.1",
    "fastapi>=0.115.12",
    "gradio>=5.28.0",
    "ninja>=1.11.1.4",
    "numpy>=2.2.5",
    "omegaconf>=2.3.0",
    "onnxruntime>=1.21.1",
    "opencv-python>=4.11.0.86",
    "pybind11>=2.13.6",
    "pygltflib>=1.16.4",
    "pymeshlab>=2023.12.post3",
    "rembg>=2.0.65",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "trimesh>=4.6.8",
    "uvicorn>=0.34.2",
    "xatlas>=0.0.10",
]

[tool.setuptools]
packages = ["hy3dgen"]
package-data = {"hy3dgen"= ["assets/*", "assets/**/*"]}

[tool.setuptools.dynamic]
version = {attr = "hy3dgen.__version__"}

[tool.setuptools.cmdclass]
build_ext = "torch.utils.cpp_extension.BuildExtension"

[tool.uv.workspace]
members = [
    "hy3dgen/texgen/differentiable_renderer",
]
